welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:7: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
 marqueSol(c)
          ^FlowerPot:9: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(Color.yellow)
         ^FlowerPot:13: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(c)
         ^FlowerPot:15: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(c)
         ^FlowerPot:19: error: too many arguments for method marqueSol: ()(c: java.awt.Color)Unit
marqueSol(c)
         ^FlowerPot:24: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.red)
              ^FlowerPot:26: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.cyan)
              ^FlowerPot:31: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.orange)
              ^FlowerPot:35: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.green)
              ^FlowerPot:37: error: too many arguments for method Flower: ()(c: java.awt.Color)Unit
	Flower(Color.Pink)
              ^